<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.slapshotapps.swimyardagetracker.ui.addworkout.viewmodels.WorkoutSetViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addworkout.fragments.WorkoutSetFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:nextFocusRight="@+id/distance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/x_symbol"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".2">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:hint="@string/reps"
                android:inputType="number"
                android:text="@={item.setReps}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/x_symbol"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_character"
            app:layout_constraintBottom_toBottomOf="@+id/reps"
            app:layout_constraintEnd_toStartOf="@+id/distance"
            app:layout_constraintStart_toEndOf="@+id/reps"
            app:layout_constraintTop_toTopOf="@+id/reps"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:nextFocusRight="@id/stroke"
            app:layout_constraintBottom_toBottomOf="@+id/reps"
            app:layout_constraintEnd_toStartOf="@+id/stroke"
            app:layout_constraintStart_toEndOf="@+id/x_symbol"
            app:layout_constraintTop_toTopOf="@+id/reps">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:hint="@string/distance"
                android:inputType="number"
                android:text="@={item.setDistance}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/stroke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/next"
            app:layout_constraintBottom_toBottomOf="@+id/reps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/distance"
            app:layout_constraintTop_toTopOf="@+id/reps">

            <AutoCompleteTextView
                android:id="@+id/stoke_autocomplete_view"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/stroke"
                android:completionThreshold="1"
                android:inputType="text"
                android:text="@={item.setStroke}"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/add_another"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/YardageTracker.Secondary.Button"
            android:onClick="@{() -> item.onAddAnotherSetTapped()}"
            android:text="@string/add_another_set"
            android:nextFocusForward="@id/reps"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".35"/>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/YardageTracker.Primary.Button"
            android:onClick="@{() -> item.onNextTapped()}"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_another"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>