<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.records.editRecord.EditPersonalRecord">

    <TextView
        android:id="@+id/event"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/YardageTracker.Title"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="100 Free"/>

    <View
        android:id="@+id/yard_time_spacer"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event"/>

    <TextView
        android:id="@+id/yardage_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yard_time_spacer"
        android:text="@string/yardage_time"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/yardage_minutes"
        app:layout_constraintTop_toBottomOf="@id/yardage_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/yardage_seconds"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/minutes">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/yardage_minutesInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:nextFocusDown="@+id/yardage_secondsInput"
            android:maxLines="1"
            android:textAlignment="center"
            android:maxLength="2"
            tools:text="22"
            android:longClickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/yardage_seconds"
        app:layout_constraintTop_toBottomOf="@id/yardage_label"
        app:layout_constraintStart_toEndOf="@+id/yardage_minutes"
        app:layout_constraintEnd_toStartOf="@+id/yardage_milliseconds"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/seconds">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/yardage_secondsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/yardage_millisecondsInput"
            android:maxLines="1"
            android:inputType="number"
            android:textAlignment="center"
            android:maxLength="2"
            tools:text="35"
            android:longClickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/yardage_milliseconds"
        app:layout_constraintTop_toBottomOf="@id/yardage_label"
        app:layout_constraintStart_toEndOf="@+id/yardage_seconds"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/milliseconds">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/yardage_millisecondsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:inputType="number"
            android:maxLength="3"
            android:textAlignment="center"
            tools:text="35"
            android:longClickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/metric_time_spacer"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yardage_minutes"/>

    <TextView
        android:id="@+id/metric_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/metric_time_spacer"
        android:text="@string/metric_time"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/metric_minutes"
        app:layout_constraintTop_toBottomOf="@id/metric_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/metric_seconds"
        android:nextFocusDown="@+id/metric_seconds"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/minutes">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/metric_minutesInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:nextFocusDown="@+id/metric_secondsInput"
            android:maxLines="1"
            android:textAlignment="center"
            android:maxLength="2"
            tools:text="22"
            android:longClickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/metric_seconds"
        app:layout_constraintTop_toBottomOf="@id/metric_label"
        app:layout_constraintStart_toEndOf="@+id/metric_minutes"
        app:layout_constraintEnd_toStartOf="@+id/metric_milliseconds"
        android:nextFocusDown="@+id/metric_milliseconds"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/seconds">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/metric_secondsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/metric_millisecondsInput"
            android:maxLines="1"
            android:inputType="number"
            android:textAlignment="center"
            android:maxLength="2"
            tools:text="35"
            android:longClickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/metric_milliseconds"
        app:layout_constraintTop_toBottomOf="@id/metric_label"
        app:layout_constraintStart_toEndOf="@+id/metric_seconds"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/milliseconds">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/metric_millisecondsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:inputType="number"
            android:maxLength="3"
            android:textAlignment="center"
            tools:text="35"
            android:longClickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/input_end_spacer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="metric_milliseconds,metric_seconds,metric_minutes"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/input_end_spacer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_end_spacer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel"
        android:text="@string/save"/>


</androidx.constraintlayout.widget.ConstraintLayout>