<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.records.newRecord.AddNewPersonalRecordFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/distance"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/distance">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:longClickable="false"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stroke"
        app:layout_constraintTop_toBottomOf="@id/distance"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/stroke">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:longClickable="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/unit_of_measure_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_of_measure"
        app:layout_constraintTop_toBottomOf="@id/stroke"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/uom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@id/unit_of_measure_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/unit_of_measure_label"/>


    <TextView
        android:id="@+id/date_entry"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uom"
        android:layout_marginTop="24dp"
        app:drawableStartCompat="@drawable/ic_calendar"
        app:drawableTint="@color/colorPrimary"
        tools:targetApi="m" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/minutes"
        app:layout_constraintTop_toBottomOf="@id/date_entry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/seconds"
        android:nextFocusRight="@+id/seconds"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Min">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAlignment="center"
            android:maxLength="2"
            tools:text="22"
            android:longClickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/seconds"
        app:layout_constraintTop_toBottomOf="@id/date_entry"
        app:layout_constraintStart_toEndOf="@+id/minutes"
        app:layout_constraintEnd_toStartOf="@+id/milliseconds"
        android:nextFocusRight="@+id/milliseconds"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Sec">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAlignment="center"
            android:maxLength="2"
            tools:text="35"
            android:longClickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/milliseconds"
        app:layout_constraintTop_toBottomOf="@id/date_entry"
        app:layout_constraintStart_toEndOf="@+id/seconds"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:nextFocusDown="@+id/save"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Sec">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:textAlignment="center"
            tools:text="35"
            android:longClickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Delete"
        app:layout_constraintTop_toBottomOf="@id/date_entry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintHorizontal_chainStyle="spread"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/date_entry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/delete_cancel"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>